# data-vault

./: Cargo.toml  PHASE_2B_COMPLIANCE.md  README.md  package-lock.json  package.json  tsconfig.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.swarm/: state.json
agents/: .gcloudignore  Dockerfile  PHASE7_VERIFICATION.md  cloudbuild.yaml  cloudfunctions.yaml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
agents/.claude-flow/: daemon-state.json
agents/.claude-flow/metrics/: codebase-map.json  consolidation.json
agents/deploy/: CLI_COMMANDS.md  DEPLOY_TEMPLATE.md  FAILURE_MODES.md  PLATFORM_INTEGRATION.md  SERVICE_TOPOLOGY.md  gcloud-deploy.sh
agents/deploy/scripts/: deploy-all.sh
agents/deploy/verification/: POST_DEPLOY_CHECKLIST.md
agents/src/: index.ts  registration.ts
agents/src/agents/: dataset-anonymization-agent.ts  index.ts
agents/src/cli/: index.ts
agents/src/contracts/: access-control.ts  agent-config.schema.ts  anonymization.schema.ts  anonymization.ts  data-access.schema.ts  decision-event.schema.ts  decision-event.ts  index.ts  schemas.ts
agents/src/execution/: index.ts
agents/src/functions/: anonymization-function.ts  cloud-function.ts  index.ts  server.ts
agents/src/platform/: index.ts  integration.ts  registration.ts
agents/src/runtime/: agent-base.ts  (+2 more)
agents/tests/: anonymization-agent.test.ts
benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
benchmarks/output/: summary.md
crates/vault-benchmarks/: Cargo.toml
crates/vault-benchmarks/src/: io.rs  lib.rs  markdown.rs  result.rs
crates/vault-benchmarks/src/adapters/: anonymization.rs  encryption.rs  hashing.rs  mod.rs  storage.rs
crates/vault-cli/: Cargo.toml
crates/vault-integration/: Cargo.toml
crates/vault-integration/src/: lib.rs
crates/vault-integration/src/adapters/: infra.rs  mod.rs
deploy/cloudfunctions/: cloudfunctions.yaml
docs/: VERIFICATION_CHECKLIST.md
src/cli/: cli.ts  formatters.ts  index.ts
src/runtime/: config.ts  edge-function.ts  entry.ts  execution-context.ts  function-registry.ts  health.ts  index.ts  telemetry.ts  tsconfig.json  types.ts
(+24 files in other folders)
