[package]
name = "vault-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Canonical benchmark interface for LLM Data Vault"

[dependencies]
# Core crates
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }
vault-storage = { path = "../vault-storage" }
vault-anonymize = { path = "../vault-anonymize" }
vault-access = { path = "../vault-access" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
