[package]
name = "vault-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Event system and webhooks for LLM Data Vault"

[features]
default = []
# Phase 2B: Enable LLM-Infra integration for shared infrastructure utilities
infra = []

[dependencies]
vault-core = { path = "../vault-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }

# Phase 2B Infra dependencies (consumed through adapters)
# llm-infra-core = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.5"
